    
10. LUCENE-451: All core query types now use ComplexExplanations so that
    boosts of zero don't confuse the BooleanWeight explain method.
    (Chris Hostetter)

11. LUCENE-593: Fixed inner Iterator
    (Kåre Fiedler Christiansen via Otis Gospodnetic)

12. LUCENE-641: fixed an off-by-one bug with IndexWriter.setMaxFieldLength()
    (Daniel Naber)

Optimizations

  1. LUCENE-586: TermDocs.skipTo() is now more efficient for multi-segment
     indexes.  This will improve the performance of many types of queries
     against a non-optimized index. (Andrew Hudson via Yonik Seeley)

  2. LUCENE-623: RAMDirectory.close now nulls out its reference to all
     internal "files", allowing them to be GCed even if references to the
     RAMDirectory itself still exist. (Nadav Har'El via Chris Hostetter)

  3. LUCENE-629: Compressed fields are no longer uncompressed and recompressed
     during segment merges (e.g. during indexing or optimizing), thus improving
     performance . (Michael Busch via Otis Gospodnetic)

  4. LUCENE-388: Improve indexing performance when maxBufferedDocs is large by
     keeping a count of buffered documents rather than counting after each
     document addition.  (Doron Cohen, Paul Smith, Yonik Seeley)

Release 2.0.0 2006-05-26

API Changes

 1. All deprecated methods and fields have been removed, except
    DateField, which will still be supported for some time
    so Lucene can read its date fields from old indexes
    (Yonik Seeley & Grant Ingersoll)

 2. DisjunctionSumScorer is no longer public.
    (Paul Elschot via Otis Gospodnetic)
    
 3. Creating a Field with both an empty name and an empty value 
    now throws an IllegalArgumentException
    (Daniel Naber)

New features

 1. LUCENE-496: Command line tool for modifying the field norms of an
    existing index; added to contrib/miscellaneous.  (Chris Hostetter)

 2. LUCENE-577: SweetSpotSimilarity added to contrib/miscellaneous.
    (Chris Hostetter)
    
Bug fixes
