@@ -159,6 +159,48 @@ name|reader
 argument_list|)
 return|;
 block|}
+comment|/** Return the positionIncrementGap from the analyzer assigned to fieldName */
+DECL|method|getPositionIncrementGap
+specifier|public
+name|int
+name|getPositionIncrementGap
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|)
+block|{
+name|Analyzer
+name|analyzer
+init|=
+operator|(
+name|Analyzer
+operator|)
+name|analyzerMap
+operator|.
+name|get
+argument_list|(
+name|fieldName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|analyzer
+operator|==
+literal|null
+condition|)
+name|analyzer
+operator|=
+name|defaultAnalyzer
+expr_stmt|;
+return|return
+name|analyzer
+operator|.
+name|getPositionIncrementGap
+argument_list|(
+name|fieldName
+argument_list|)
+return|;
+block|}
 DECL|method|toString
 specifier|public
 name|String
